bug#53409 (part of bug#52225) - fix arguments to mysql_frm_type, pass filename instead of tablename, this as cluster uses table_type for further processing